ui fixes and replaced env variables, saving before deploy

--- a/src/app/modules/product-detail/product-mobile/product-mobile.component.html
+++ b/src/app/modules/product-detail/product-mobile/product-mobile.component.html
@@ -25,7 +25,8 @@
       </div>
     </div>
   </div>
-  <app-cards mode="mobile" class="mt-5"></app-cards>
+  <div class="col-12 h3 similar-products">Similar products</div>
+  <app-cards mode="mobile"></app-cards>
   <mat-toolbar *ngIf="product.quantity > 0" color="primary">
     <span>
       <mat-icon>remove_circle_outline</mat-icon>
