--- a/src/app/modules/product-detail/product-mobile/product-mobile.component.scss
+++ b/src/app/modules/product-detail/product-mobile/product-mobile.component.scss
@@ -1,35 +1,50 @@
-img{
-    overflow-x: hidden;
-    height: 50vh;
-    width: 100%;
-    object-fit: fill;
+img {
+  overflow-x: hidden;
+  height: 50vh;
+  width: 100%;
+  object-fit: fill;
 }
-mat-toolbar{
-    z-index: 1;
-    position: sticky;
-    bottom: 0px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+mat-toolbar {
+  z-index: 1;
+  position: sticky;
+  bottom: 0px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
-mat-toolbar > span{
-    display: flex;
-    align-items: center;
+mat-toolbar > span {
+  display: flex;
+  align-items: center;
 }
-.qty{
-    padding: 0px 5px;
+.qty {
+  padding: 0px 5px;
 }
 
-app-cards{
-    display:flex;
-    overflow-x: scroll;
-  }
-.out-of-stock{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+app-cards {
+  display: flex;
+  overflow-x: scroll;
 }
-.out-of-stock > p{
-    padding-bottom: 0px;
-    margin-bottom: 0px;
+.out-of-stock {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.out-of-stock > p {
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+
+.similar-products {
+  text-align: center;
+  padding: 2rem 4rem;
+}
+
+@media only screen and (min-width: 600px) {
+  .hero-body {
+    top: 50%;
+    left: 50%;
+  }
+  h3 {
+    font-size: 3rem;
+  }
 }
