--- a/src/app/modules/cart/cart-summary/cart-summary.component.html
+++ b/src/app/modules/cart/cart-summary/cart-summary.component.html
@@ -4,15 +4,15 @@
     <mat-list role="list" class="row">
       <mat-list-item role="listitem">
         <span class="col-6">Price : </span>
-        <span class="col-6 cart-summary__amount">{{priceSymbol}}&nbsp;{{ cartSummary?.price }}</span>
+        <span class="col-6 cart-summary__amount">{{priceSymbol}}&nbsp;{{ cartSummary?.price | number: '1.1-3' }}</span>
       </mat-list-item>
       <mat-list-item role="listitem">
         <span class="col-6">Delivery Price : </span>
-        <span class="col-6 cart-summary__amount">{{priceSymbol}}&nbsp;{{ cartSummary?.delivery_price }}</span>
+        <span class="col-6 cart-summary__amount">{{priceSymbol}}&nbsp;{{ cartSummary?.delivery_price | number: '1.1-3'}}</span>
       </mat-list-item>
       <mat-list-item role="listitem">
         <span class="col-6">Total : </span>
-        <span class="col-6 cart-summary__amount">{{priceSymbol}}&nbsp;{{ cartSummary?.total }}</span>
+        <span class="col-6 cart-summary__amount">{{priceSymbol}}&nbsp;{{ cartSummary?.total | number: '1.1-3'}}</span>
       </mat-list-item>
     </mat-list>
   </div>
