--- a/src/app/modules/shop/cards/cards.component.scss
+++ b/src/app/modules/shop/cards/cards.component.scss
@@ -1,5 +1,5 @@
 .mobile {
-    width: calc(50vw - 10px);
+    width: calc(50vw - 15px);
     margin: 5px;
   }
   .mobile mat-card-title {
@@ -15,15 +15,13 @@
     margin-bottom: 16px;
     display: flex;
     flex-direction: column;
+    margin-right: 16px;
   }
   .column img{
     height: 274px;
   }
   app-spinner{
     width: 100%;
-  }
-  span:nth-child(1){
-    margin-left: 5px;
   }
   mat-card img{
     height: 153px;
