--- a/src/app/modules/shop/shop-all/shop-all.component.html
+++ b/src/app/modules/shop/shop-all/shop-all.component.html
@@ -16,7 +16,7 @@
         Explore more
     </h3>
 </div>
-<app-infinite-products></app-infinite-products>
+<app-cards mode="mobile" class="explore-more"></app-cards>
 </div>
 <ng-template #desktopTemplate>
     <div class="row mt-3">
@@ -24,17 +24,17 @@
             Trending
         </h3>
     </div>
-    <app-cards class="products-slider" mode='mobile' filter='trending'></app-cards>
+    <app-cards class="desktop-cards" mode='desktop' filter='trending'></app-cards>
     <div class="row mt-3">
         <h3>
             Categories
         </h3>
     </div>
-    <app-cards  class="products-slider" mode='mobile' filter='trending'></app-cards>
+    <app-cards class="desktop-cards" mode='desktop' filter='trending'></app-cards>
     <div class="row mt-3">
-        <h3 class="mb-0">
+        <h3>
             Explore more
         </h3>
     </div>
-    <app-infinite-products></app-infinite-products>
+    <app-cards class="desktop-cards"></app-cards>
 </ng-template>
