--- a/src/app/modules/shop/shop-filter/shop-filter.component.html
+++ b/src/app/modules/shop/shop-filter/shop-filter.component.html
@@ -1,1 +1,31 @@
-<p>shop-filter works!</p>
+<div class="row mt-3">
+    <h3 class="title">
+        Products
+    </h3>
+</div>
+<ng-container *ngIf="products; else elseBlock">
+  <div class="product-row">
+    <span *ngFor="let product of products">
+      <mat-card
+        [routerLink]="['/product/' + product.product_id]"
+        class="column"
+      >
+        <img
+          mat-card-image
+          [src]="product.product_image"
+          [alt]="product.product_name"
+        />
+        <mat-card-content>
+          <mat-card-title class="text-wrap">{{
+            product.product_name | ellipsis
+          }}</mat-card-title>
+          <mat-card-subtitle>{{ product.price }}</mat-card-subtitle>
+        </mat-card-content>
+      </mat-card>
+    </span>
+  </div>
+  </ng-container>
+  <ng-template #elseBlock>
+    <app-spinner></app-spinner>
+  </ng-template>
+  
