--- a/src/app/modules/home/home-desktop/home-desktop.component.scss
+++ b/src/app/modules/home/home-desktop/home-desktop.component.scss
@@ -2,6 +2,7 @@
     text-align: center;
     font-size: 2.5rem;
     padding: 2rem 4rem;
+    color: slategray;
 }
 .wrap-cards{
     display: flex;
