--- a/src/app/modules/home/home-desktop/home-desktop.component.html
+++ b/src/app/modules/home/home-desktop/home-desktop.component.html
@@ -11,3 +11,9 @@
     </h3>
 </div>
 <app-categories mode="desktop" class="wrap-cards"></app-categories>
+<div class="row mt-3">
+    <h3 class="title">
+        Explore more
+    </h3>
+</div>
+<app-cards mode="desktop" class="wrap-cards"></app-cards>
