--- a/src/app/modules/shop/shop-all/shop-all.component.html
+++ b/src/app/modules/shop/shop-all/shop-all.component.html
@@ -7,11 +7,11 @@
 <app-cards class="products-slider" mode='mobile' filter='trending'></app-cards>
 <div class="row mt-3">
     <h3>
-        Categories
+        Premium
     </h3>
 </div>
 <app-cards  class="products-slider" mode='mobile' filter='trending'></app-cards>
-<div class="row mt-3">
+<div class="row">
     <h3>
         Explore more
     </h3>
@@ -19,18 +19,18 @@
 <app-cards mode="mobile" class="explore-more"></app-cards>
 </div>
 <ng-template #desktopTemplate>
-    <div class="row mt-3">
+    <div class="row">
         <h3>
             Trending
         </h3>
     </div>
     <app-cards class="desktop-cards" mode='desktop' filter='trending'></app-cards>
-    <div class="row mt-3">
+    <div class="row">
         <h3>
-            Categories
+            Premium
         </h3>
     </div>
-    <app-cards class="desktop-cards" mode='desktop' filter='trending'></app-cards>
+    <app-cards class="desktop-cards" mode='desktop'></app-cards>
     <div class="row mt-3">
         <h3>
             Explore more
