--- a/src/app/modules/shop/shop-filter/shop-filter.component.scss
+++ b/src/app/modules/shop/shop-filter/shop-filter.component.scss
@@ -3,6 +3,7 @@ h3 {
     text-align: center;
     font-size: 2.5rem;
     padding: 2rem 4rem;
+    color: slategray;
   }
   .column {
     width: calc(50vw - 15px);
@@ -16,22 +17,11 @@ h3 {
     overflow-x: hidden;
     margin-left: 5px;
   }
-
-//   .column {
-//     width: 400px;
-//     margin-bottom: 16px;
-//     display: flex;
-//     flex-direction: column;
-//     margin-right: 16px;
-//   }
-//   .column img{
-//     height: 274px;
-//   }
   app-spinner{
     width: 100%;
   }
   mat-card img{
-    height: 153px;
+    height: 280px;
   }
   .product-row{
     display:flex;
@@ -47,14 +37,18 @@ h3 {
         flex-wrap: wrap;
     }
     .column {
-        width: 373px;
+        width: auto;
         margin-bottom: 16px;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         flex-wrap:wrap;
         margin-right: 16px;
       }
       .column img{
         height: 274px;
+      }
+      mat-card img{
+        height: 533px !important;
+        width: 400px !important;
       } 
   }
