--- a/src/app/shared/cards/cards.component.html
+++ b/src/app/shared/cards/cards.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="products; else elseBlock">
-  <span *ngFor="let product of products">
+  <span *ngFor="let product of products.slice(0,8)">
     <mat-card
       [routerLink]="['/product/' + product.product_id]"
       [ngClass]="mode === 'mobile' ? 'mobile' : 'column'"
@@ -13,7 +13,7 @@
         <mat-card-title class="text-wrap">{{
           product.product_name.length > 15 ? product.product_name.slice(0,15) + "..." : product.product_name
         }}</mat-card-title>
-        <mat-card-subtitle>{{ product.price }}</mat-card-subtitle>
+        <mat-card-subtitle>{{this.appStateService.priceSymbol$ | async}}&nbsp;{{ product.price }}</mat-card-subtitle>
       </mat-card-content>
     </mat-card>
   </span>
