--- a/src/app/modules/search/search/search.component.scss
+++ b/src/app/modules/search/search/search.component.scss
@@ -1,8 +1,56 @@
-.search-container {
-  padding: 2rem 4rem;
+.search__body {
+  padding: 16px;
 }
-ais-instantsearch{
+
+.search__input {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-items: center;
+}
+
+.search__icon {
+  padding-bottom: 1.35em;
+}
+
+mat-panel-description {
+  float: right;
+}
+
+mat-expansion-panel-header-description {
+  justify-content: end;
+}
+
+.search__filter-icon {
+  justify-content: end;
+}
+
+.search__result-body {
+  max-width: 32rem;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.search__product-link {
+  text-decoration: none;
+  transition: color 0.15s;
+  display: table;
+  width: 100%;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-color: rgba(0, 0, 0, 0.1);
+  padding-bottom: 0.5rem;
+  margin-top: 0.5rem;
+  opacity: 1;
+  transition: opacity 0.15s ease-in;
+  color: #3f51b5;
+}
+.search__product-link:hover,
+.search__product-link:focus {
+  opacity: 0.5;
+  transition: opacity 0.15s ease-in;
+}
+.search__product-link:active {
+  opacity: 0.8;
+  transition: opacity 0.15s ease-out;
 }
