--- a/src/app/shared/main-nav/main-nav.component.html
+++ b/src/app/shared/main-nav/main-nav.component.html
@@ -62,13 +62,12 @@
       >
     </mat-toolbar>
     <ng-content></ng-content>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <svg class="main-nav__footer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path
         fill="#3f51b5"
         fill-opacity="1"
         d="M0,128L80,133.3C160,139,320,149,480,149.3C640,149,800,139,960,133.3C1120,128,1280,128,1360,128L1440,128L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
       >
-    Hello
     </path>
     </svg>
   </mat-sidenav-content>
