wip completed mobile layout

--- a/src/app/modules/search/search/search.component.html
+++ b/src/app/modules/search/search/search.component.html
@@ -36,49 +36,55 @@
 </section> -->
 
 <section class="search__body">
-  <span class="search__input">
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Search Products</mat-label>
-      <input matInput placeholder="Search products" />
-    </mat-form-field>
-    <mat-icon class="search__icon" aria-hidden="false" aria-label="search icon"
-      >search</mat-icon
-    >
-  </span>
-  <mat-expansion-panel hideToggle>
-    <mat-expansion-panel-header>
-      <mat-panel-title> Filters</mat-panel-title>
-      <mat-panel-description class="search__filter-icon">
-        <mat-icon
-          class="search__icon"
-          aria-hidden="false"
-          aria-label="search icon"
-          >filter_list</mat-icon
-        >
-      </mat-panel-description>
-    </mat-expansion-panel-header>
-    <p>This is the primary content of the panel.</p>
-  </mat-expansion-panel>
+  <ais-instantsearch [config]="config">
+    <ais-configure [searchParameters]="searchParameters"></ais-configure>
+    <span class="search__input">
+      <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>Search Products</mat-label>
+        <input matInput placeholder="Search products" />
+      </mat-form-field>
+      <mat-icon
+        class="search__icon"
+        aria-hidden="false"
+        aria-label="search icon"
+        >search</mat-icon
+      >
+    </span>
+    <mat-expansion-panel hideToggle>
+      <mat-expansion-panel-header>
+        <mat-panel-title> Filters</mat-panel-title>
+        <mat-panel-description class="search__filter-icon">
+          <mat-icon
+            class="search__icon"
+            aria-hidden="false"
+            aria-label="search icon"
+            >filter_list</mat-icon
+          >
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <p>This is the primary content of the panel.</p>
+    </mat-expansion-panel>
 
-  <div class="search__result-body">
-    <div>
-      <a href="#" class="search__product-link">
-        <div class="search__img-cntn">
-          <img
-            src="http://mrmrs.github.io/images/0010.jpg"
-            alt=""
-            class="img-cntn__img"
-          />
-        </div>
-        <div class="result-body__product-desc">
-          <h1 class="product-desc__title">Grid Systems</h1>
-          <h2 class="product-desc__category">Category</h2>
-          <dl class="product-desc__price">
-            <dt class="price__label">Price</dt>
-            <dd class="price__amount">$45.00</dd>
-          </dl>
-        </div>
-      </a>
+    <div class="search__result-body">
+      <ais-hits>
+        <ng-template let-hits="hits">
+          <div *ngFor="let hit of hits">
+            <a href="#" class="search__product-link">
+              <div class="search__img-cntn">
+                <img [src]="hit.image" alt="" class="img-cntn__img" />
+              </div>
+              <div class="result-body__product-desc">
+                <h1 class="product-desc__title">{{ hit.product_name | titlecase }}</h1>
+                <h2 class="product-desc__category">{{ hit.category | titlecase }}</h2>
+                <dl class="product-desc__price">
+                  <dt class="price__label">Price</dt>
+                  <dd class="price__amount">&nbsp;&nbsp;{{ hit.price | currency: "₹"}}</dd>
+                </dl>
+              </div>
+            </a>
+          </div>
+        </ng-template>
+      </ais-hits>
     </div>
-  </div>
+  </ais-instantsearch>
 </section>
