--- a/src/app/modules/search/search/search.component.scss
+++ b/src/app/modules/search/search/search.component.scss
@@ -26,31 +26,42 @@ mat-expansion-panel-header-description {
 }
 
 .search__result-body {
-  max-width: 32rem;
-  margin-right: auto;
-  margin-left: auto;
+  padding: 16px;
+  line-height: 0cm;
 }
-
 .search__product-link {
-  text-decoration: none;
-  transition: color 0.15s;
-  display: table;
+  margin-right: 16px;
+  display: flex;
   width: 100%;
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  border-color: rgba(0, 0, 0, 0.1);
-  padding-bottom: 0.5rem;
-  margin-top: 0.5rem;
-  opacity: 1;
-  transition: opacity 0.15s ease-in;
-  color: #3f51b5;
+  color: #000;
+  text-decoration: none;
+  transition: 0.2s opacity ease-in;
+  padding-bottom: 16px;
+  margin-bottom: 16px;
 }
-.search__product-link:hover,
-.search__product-link:focus {
+.mat-form-field {
+  width: 100%;
+  padding: 0px 1rem 0px 0px;
+}
+.search__product-link:hover {
   opacity: 0.5;
-  transition: opacity 0.15s ease-in;
 }
-.search__product-link:active {
-  opacity: 0.8;
-  transition: opacity 0.15s ease-out;
+.img-cntn__img {
+  width: 5rem;
+  margin-right: 1rem;
+  height: 100%;
+}
+.product-desc__title {
+  font-size: 1.2rem;
+}
+.product-desc__price,
+.product-desc__category {
+  font-size: 15px;
+  font-weight: 400;
+}
+.product-desc__price {
+  display: flex;
+}
+.price__amount {
+  color: #3f51b5;
 }
