--- a/src/app/modules/search/search/search.component.scss
+++ b/src/app/modules/search/search/search.component.scss
@@ -65,3 +65,8 @@ mat-expansion-panel-header-description {
 .price__amount {
   color: #3f51b5;
 }
+ais-refinement-list {
+  //display:none;
+  width: 100%;
+  list-style-type: none !important;
+}
