--- a/src/app/modules/cart/view-cart/view-cart.component.html
+++ b/src/app/modules/cart/view-cart/view-cart.component.html
@@ -1,4 +1,4 @@
-<ng-container #mobileTemplate>
+<ng-container #mobileTemplate class="container-lg">
   <div class="view-cart-mobile">
     <div class="view-cart-mobile__title-container">
       <span class="view-cart-mobile__title-container__text"> Your Cart </span>
