--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
-ul{
-    list-style-type: none;
+html,
+body {
+  height: 100%;
 }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+ul {
+  list-style-type: none;
+}
+
+.container-lg{
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
+  
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
