deleted some components

--- a/src/app/modules/home/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/modules/home/terms-and-conditions/terms-and-conditions.component.html
@@ -1,2 +1,2 @@
 <h3>Terms And Conditions</h3>
-<p>This website is only for testing purposes developed by Rohan Thakur. It does not endorse any real product. Only use test payment i.e. card no 4111 1111 1111 1111. DO NOT ENTER CORRECT CARD DETAILS ON THIS WEBSITE.</p>
+<p>This component will show terms and conditions.</p>
