--- a/src/app/modules/user/login/login.component.scss
+++ b/src/app/modules/user/login/login.component.scss
@@ -5,6 +5,11 @@
   .example-full-width {
     width: 100%;
   }
+
+  form{
+    width: 70%;
+    margin: auto;
+  }
   
   mat-hint{
     color: tomato;
