--- a/src/app/shared/main-nav/main-nav.component.scss
+++ b/src/app/shared/main-nav/main-nav.component.scss
@@ -35,6 +35,9 @@ mat-sidenav-content {
   width: 100%;
   overflow-x: hidden;
 }
+svg{
+  display: none;
+}
 @media only screen and (max-width: 600px) {
   svg {
     display: none;
