--- a/src/app/modules/order-receipt/receipt-component/receipt-component.html
+++ b/src/app/modules/order-receipt/receipt-component/receipt-component.html
@@ -3,7 +3,7 @@
     <img src="https://firebasestorage.googleapis.com/v0/b/bazaar-8537f.appspot.com/o/undraw_Order_confirmed_re_g0if.svg?alt=media&token=e31cfb37-f5f9-4009-8b5e-17e8a89a533c" alt="order confirmed" class="card-img-top">
     <div class="card-body center">
         <h3 class="card-title">Thank you</h3>
-        <p class="card-text">Your order has been confirmed. Your order id is {{orderId}}</p>
+        <p class="card-text">Your order {{orderId}} has been confirmed. </p>
         <a [routerLink]="['/home']" class="btn btn-primary">Continue shopping</a>
     </div>
 </div>
